@@ -2,6 +2,8 @@ Cascading Change Log
 
 1.2-WIP
 
+  Added c.o.f.FilterPartialDuplicates filter and c.p.a.Unique sub-assembly for optimizing de-duping processes.
+
   Changed c.s.TextDelimited to accept Fields.ALL or Fields.UNKNOWN for arbitrarily sized or unknown records.
 
   Changed c.t.MultiSourceTap to support #openForRead().
